--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/list_item_artist_layout"
     android:weightSum="1">
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="?android:attr/listPreferredItemHeight"
-        android:id="@+id/thumbnail_image" />
+        android:id="@+id/artist_thumbnail_image"
+        android:layout_below="@id/search_bar"
+        style="@style/thumbnail_image"/>
     <TextView
+        android:layout_below="@id/search_bar"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:hint="@string/artist_placeholder"
         android:id="@+id/artist_name"
-        android:layout_gravity="center_horizontal"
+        android:gravity="center_vertical"
+        android:layout_toRightOf="@id/artist_thumbnail_image"
         android:layout_weight="0.11" />
-</LinearLayout>
+</RelativeLayout>
