--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,7 @@
     <style name="thumbnail_image">
         <item name="android:paddingLeft">?android:attr/listPreferredItemPaddingLeft</item>
         <item name="android:paddingRight">?android:attr/listPreferredItemPaddingRight</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">?android:attr/listPreferredItemHeight</item>
-        <item name="android:src">@mipmap/ic_launcher</item>
+        <item name="android:layout_width">125dip</item>
+        <item name="android:layout_height">125dip</item>
     </style>
 </resources>
