fixed fragments overlapping, search query hint not showing

--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/list_item_track_layout"
+    android:background="?android:windowBackground"
     android:weightSum="1">
     <ImageView
         android:id="@+id/album_thumbnail_image"
