--- a/app/src/main/res/layout/fragment_artist_list.xml
+++ b/app/src/main/res/layout/fragment_artist_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:windowBackground"
     tools:context="com.julie.spotifystreamer.ArtistFragment">
 
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
