--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_layout"
+    android:id="@+id/container"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     tools:layout="@layout/fragment_artist"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:name=".MainActivity"
     tools:context=".MainActivity">
 </FrameLayout>
