added touch selectors, colors, removed grids

--- a/app/src/main/res/layout/fragment_artist_list.xml
+++ b/app/src/main/res/layout/fragment_artist_list.xml
@@ -6,10 +6,16 @@
     android:background="?android:windowBackground"
     tools:context="com.julie.spotifystreamer.ArtistFragment">
 
-    <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style = "@style/ListStyle"/>
 
-    <TextView android:id="@android:id/empty" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:gravity="center" />
+    <TextView android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:gravity="center_horizontal" />
 
 </FrameLayout>
