--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/list_item_artist_layout"
-    android:background="?android:windowBackground"
+    android:background="@drawable/touch_selector"
     android:weightSum="1">
     <ImageView
         android:id="@+id/artist_thumbnail_image"
