--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/list_item_artist_layout"
     android:background="@drawable/touch_selector"
@@ -13,7 +15,5 @@
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:hint="@string/artist_placeholder"
         android:id="@+id/artist_name"
-        android:gravity="center_vertical"
-        android:layout_toRightOf="@id/artist_thumbnail_image"
-        android:layout_weight="0.11" />
-</RelativeLayout>
+        android:gravity="center_vertical"/>
+</LinearLayout>
