--- a/app/src/main/res/layout-sw600dp/fragment_artist_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_artist_list.xml
@@ -3,18 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context="com.julie.spotifystreamer.TrackFragment">
+    android:background="?android:windowBackground"
+    tools:context="com.julie.spotifystreamer.ArtistFragment">
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ListStyle"/>
+        style = "@style/ListStyle"/>
+    <View
+        android:paddingLeft="10dp"
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:background="@drawable/shadow_gradient"/>
 
     <TextView android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
         android:gravity="center_horizontal" />
+
 </FrameLayout>
