--- a/app/src/main/res/layout/fragment_track_player.xml
+++ b/app/src/main/res/layout/fragment_track_player.xml
@@ -10,12 +10,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/artist_placeholder"
+        android:text="@string/artist_placeholder"
         android:id="@+id/artist_name"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/album_placeholder"
+        android:text="@string/album_placeholder"
         android:id="@+id/album_name"/>
     <ImageView
         android:layout_width="200dp"
@@ -25,11 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/track_name"
-        android:hint="@string/track_placeholder"/>
+        android:text="@string/track_placeholder"/>
     <!-- the playing status bar -->
     <!-- the icons for previous, pause, and skip -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"></LinearLayout>
 </LinearLayout>
