--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_height="?android:listPreferredItemHeight"
+        android:gravity="center_vertical"
         android:layout_width="match_parent">
         <TextView
             android:id="@+id/album_name"
