--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -17,8 +17,7 @@
             android:id="@+id/album_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/album_placeholder"
-            android:layout_toRightOf="@id/album_thumbnail_image"/>
+            android:hint="@string/album_placeholder"/>
         <TextView
             android:id="@+id/track_name"
             android:layout_width="wrap_content"
