--- a/app/src/main/res/layout/activity_track_player.xml
+++ b/app/src/main/res/layout/activity_track_player.xml
@@ -1,7 +1,7 @@
-<fragment
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
+    android:id="@+id/player_container"
     android:name="com.julie.spotifystreamer.TrackPlayerFragment"
     tools:layout="@layout/fragment_track_player"
     android:layout_width="match_parent"
