--- a/app/src/main/res/layout/fragment_track_player.xml
+++ b/app/src/main/res/layout/fragment_track_player.xml
@@ -23,6 +23,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/track_name"/>
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@android:style/Widget.ProgressBar.Horizontal"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_skip_previous_black_24dp"
+            android:id="@+id/button_previous"
+            android:onClick="skipPreviousPlayer"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_play_arrow_black_24dp"
+            android:id="@+id/button_play"
+            android:visibility="gone"
+            android:onClick="resumePlayer"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pause_black_24dp"
+            android:id="@+id/button_pause"
+            android:onClick="pausePlayer"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_skip_next_black_24dp"
+            android:id="@+id/button_next"
+            android:onClick="skipNextPlayer"/>
+    </LinearLayout>
+    
     <!-- the playing status bar -->
     <!-- the icons for previous, pause, and skip -->
 </LinearLayout>
