--- a/app/src/main/res/layout/fragment_track_player.xml
+++ b/app/src/main/res/layout/fragment_track_player.xml
@@ -8,54 +8,87 @@
     tools:context="com.julie.spotifystreamer.TrackPlayerFragment">
     <!-- the album artwork, artist name, album name, track name -->
     <TextView
+        android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/medium_grey"
+        android:fontFamily="sans-serif-condensed"
+        android:hint="@string/artist_placeholder"
         android:id="@+id/artist_name"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/medium_grey"
+        android:fontFamily="sans-serif-condensed"
+        android:hint="@string/album_placeholder"
         android:id="@+id/album_name"/>
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        style="@style/musicPlayerTrackImage"
         android:id="@+id/player_track_image"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/track_name"/>
+        android:id="@+id/track_name"
+        android:hint="@string/track_placeholder"
+        android:textColor="@color/medium_grey"
+        android:fontFamily="sans-serif-condensed"/>
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@android:style/Widget.ProgressBar.Horizontal"/>
+        android:id="@+id/progress_bar"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:progressTint="@color/spotify_green"
+        android:max="30"/>
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/medium_grey"
+            android:fontFamily="sans-serif-condensed"
+            android:text="00:00"
+            android:id="@+id/trackBeginningTextView"/>
+        <TextView
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/medium_grey"
+            android:fontFamily="sans-serif-condensed"
+            android:text="00:30"
+            android:id="@+id/trackDurationTextView"/>
+    </LinearLayout>
+    <LinearLayout
+        android:paddingTop = "16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/musicPlayerButton"
             android:src="@drawable/ic_skip_previous_black_24dp"
             android:id="@+id/button_previous"
-            android:onClick="skipPreviousPlayer"/>
+            android:onClick="skipPreviousPlayer"
+            android:layout_marginRight="16dp"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/musicPlayerButton"
             android:src="@drawable/ic_play_arrow_black_24dp"
             android:id="@+id/button_play"
             android:visibility="gone"
             android:onClick="resumePlayer"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/musicPlayerButton"
             android:src="@drawable/ic_pause_black_24dp"
             android:id="@+id/button_pause"
             android:onClick="pausePlayer"/>
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/musicPlayerButton"
             android:src="@drawable/ic_skip_next_black_24dp"
             android:id="@+id/button_next"
-            android:onClick="skipNextPlayer"/>
+            android:onClick="skipNextPlayer"
+            android:layout_marginLeft="16dp"/>
     </LinearLayout>
     
     <!-- the playing status bar -->
