--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -23,4 +23,11 @@
     <style name="ListStyle">
         <item name="android:choiceMode">singleChoice</item>
     </style>
+
+    <style name="musicPlayerTrackImage">
+        <item name="android:layout_width">400dp</item>
+        <item name="android:layout_height">400dp</item>
+        <item name="android:paddingLeft">50dp</item>
+        <item name="android:paddingRight">50dp</item>
+    </style>
 </resources>
