--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="spotify_green">#81b71a</color>
     <color name="spotify_green_dark">#71a117</color>
     <color name="white">#ffffff</color>
+    <color name="medium_grey">#7e7e7e</color>
 </resources>
