--- a/app/src/main/res/layout/fragment_track_player.xml
+++ b/app/src/main/res/layout/fragment_track_player.xml
@@ -32,7 +32,7 @@
         android:hint="@string/track_placeholder"
         android:textColor="@color/medium_grey"
         android:fontFamily="sans-serif-condensed"/>
-    <ProgressBar
+    <SeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/progress_bar"
@@ -40,8 +40,8 @@
         android:layout_marginBottom="16dp"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:progressTint="@color/spotify_green"
-        android:maxHeight="5dp"
-        android:minHeight="5dp"/>
+        android:maxHeight="3dp"
+        android:minHeight="3dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
