--- a/app/src/main/res/layout/list_item_artist.xml
+++ b/app/src/main/res/layout/list_item_artist.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:hint="@string/artist_placeholder"
+        android:fontFamily="sans-serif-condensed"
         android:id="@+id/artist_name"
         android:gravity="center_vertical"/>
 </LinearLayout>
