--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -27,7 +27,10 @@
     <style name="musicPlayerTrackImage">
         <item name="android:layout_width">400dp</item>
         <item name="android:layout_height">400dp</item>
-        <item name="android:paddingLeft">50dp</item>
-        <item name="android:paddingRight">50dp</item>
+    </style>
+
+    <style name="musicPlayerTrackImageLandscape" parent="musicPlayerTrackImage">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">200dp</item>
     </style>
 </resources>
