--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,10 @@
     <style name="musicPlayerTrackImage">
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">200dp</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:paddingRight">20dp</item>
+    </style>
+
+    <style name="musicPlayerTrackImageLandscape" parent="musicPlayerTrackImage">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
     </style>
 </resources>
