--- a/app/src/main/res/layout/activity_track_player.xml
+++ b/app/src/main/res/layout/activity_track_player.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/player_container"
-    android:name="com.julie.spotifystreamer.TrackPlayerFragment"
+    android:name="@string/now_playing"
     tools:layout="@layout/fragment_track_player"
+    tools:context=".TrackPlayerActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
